--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-poppins;
+  }
+  p {
+    @apply font-poppins;
+  }
+  button {
+    @apply font-poppins;
+  }
+  input {
+    @apply font-poppins;
+  }
+}
